# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: custom_mixins.py  settings.py  urls.py
task_manager/fixtures/: labels.json  statuses.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: _navigation.html  base.html  index.html
task_manager/templates/labels/: list.html
task_manager/templates/statuses/: list.html
task_manager/templates/tasks/: detail.html  list.html
task_manager/templates/users/: login.html  users_list.html
task_manager/users/: admin.py  auth_urls.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
